# fastapi-auth

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md
auth/: __main__.py  pyproject.toml
auth-old/: pyproject.toml
auth-old/src/adapters/: context.py  repository.py
auth-old/src/auth/: api.py
auth-old/src/auth/api/routers/: login.py
auth-old/src/auth/services/: tokenization.py
auth-old/src/domain/: commands.py  events.py  services.py  settings.py
auth-old/tests/: test_version.py
auth-old/tests/integration/: test_create.py  test_delete.py
auth-old/tests/unit/services/: test_criptography.py  test_tokenization.py
auth/auth/adapters/: context.py  repository.py  schemas.py
auth/auth/adapters/repositories/: accounts.py
auth/auth/app/: handlers.py
auth/auth/app/api/: main.py
auth/auth/domain/: aggregates.py  context.py  events.py  models.py  repository.py  services.py
auth/auth/domain/repositories/: profiles.py
auth/auth/domain/services/: cryptography.py  tokenization.py
auth/auth/ports/: context.py  repository.py
auth/infrastructure/: setup.py
auth/infrastructure/migrations/: 002_create_profiles.sql
auth/src/adapters/: repository.py  schemas.py
auth/src/auth/: criptography.py  tokenization.py
auth/src/auth/api/: __init__.py
auth/src/auth/routers/: login.py
auth/src/auth/services/: criptography.py
auth/src/domain/: context.py  models.py  repository.py  services.py
auth/tests/: test_settings.py  test_version.py
auth/tests/adapters/: test_repository.py  test_users.py
auth/tests/domain/: old_repository.py  test_repository.py  test_services.py  test_users.py
auth/tests/e2e/: test_auth.py
auth/tests/infrastructure/: test_setup.py
auth/tests/integration/: _create.py  _database.py  test_accounts.py  test_read.py
auth/tests/unit/: test_accounts_ports.py  test_api.py  test_criptography.py  test_crud.py  test_services.py  test_tokenization.py
auth/tests/unit/mock/: context.py  repository.py
auth/tests/unit/services/: test_criptography.py
infrastructure/: setup.py
(+8 files in other folders)
