[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["ericcardozo <eric.m.cardozo@mi.unc.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
mock = "^5.1.0"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.1.2"
passlib = "^1.7.4"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.2"
python-multipart = "^0.0.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.3"
pytest-cov = "^4.1.0"
mock-alchemy = "^0.2.6"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
