[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["ericcardozo <eric.m.cardozo@mi.unc.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.3"
pytest-cov = "^4.1.0"
mock-alchemy = "^0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
